# FBCNN

./: .gitignore  makefile  pyproject.toml
options/: train_fbcnn_color.json  train_fbcnn_graydouble.json
src/: cli.py  main.py  predict.py  test_run.py  train.py
src/classes/: Model.py  Predictor.py  TestRunner.py
src/constants/: __init__.py
src/data/: dataset_jpeg.py  dataset_jpeggray.py  dataset_jpeggraydouble.py  select_dataset.py
src/models/: get_model.py  model_base.py  model_fbcnn.py  network_fbcnn.py  select_network.py
src/typings/: TrainOptions.py  __init__.py
src/utils/: array_to_tensor.py  ask_confirmation.py  get_logger.py  get_timestamp.py  screen_size.py  tensor_to_array.py  utils_bnorm.py  utils_image.py  utils_model.py  utils_option.py
src/utils/image/: compress_image.py  images_diff.py  load_image.py  save_image.py  show_image.py
